<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LibraryActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/skindesc_top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/lib_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start|center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back_btn" />


        <TextView
            android:id="@+id/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/prickly_heat_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="14dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <!-- Scrollable content -->
    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skindesc_top_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="25dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="188dp"
                android:layout_height="135dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/ph_img" />


            <TextView
                android:id="@+id/prickly_desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="8sp"
                android:paddingHorizontal="25dp"
                android:text="@string/prickly_heat_description"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/home_remedy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:paddingHorizontal="20dp"
                android:text="@string/remedies_txt"
                android:textColor="@color/dark_blue"
                android:textSize="19dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/ph_home_remedy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="8sp"
                android:paddingHorizontal="20dp"
                android:text="@string/ph_home_remedy"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/result_disclaimer_bg"
                android:paddingTop="10dp"
                android:paddingBottom="20dp">

                <!-- Header -->
                <TextView
                    android:id="@+id/result_disclaimer_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/results_disclaimer_header"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Body text -->
                <TextView
                    android:id="@+id/result_disclaimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="50dp"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="4dp"
                    android:padding="16dp"
                    android:text="@string/result_disclaimer_txt"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </FrameLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>