<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/preview_img"
        android:layout_width="352dp"
        android:layout_height="352dp"
        android:contentDescription="@string/img_prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <ImageButton
        android:id="@+id/check_btn"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@null"
        android:contentDescription="@string/check_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preview_img"
        app:layout_constraintVertical_bias="0.802"
        app:srcCompat="@drawable/check_btn"
        app:tint="@null" />

    <ImageButton
        android:id="@+id/cancel_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/cancel_button"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview_img"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/cancel_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>