<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ResultsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/results_top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start|center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back_btn" />

        <TextView
            android:id="@+id/results_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/view_record_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="14dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/results_top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <!-- Inner layout that holds your content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_img"
                android:layout_width="335dp"
                android:layout_height="335dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/img_prev" />

            <!-- The skindisease will show here -->
            <TextView
                android:id="@+id/skin_disease_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/remedies_txt"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginTop="16dp"
                android:gravity="right"
                android:text="@string/remedies_txt"
                android:textColor="@color/dark_blue"
                android:textSize="19sp"
                android:textStyle="bold" />


            <!-- The remedies will show here -->
            <TextView
                android:id="@+id/remedies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:justificationMode="inter_character"
                android:paddingHorizontal="25dp"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/result_disclaimer_bg"
                android:paddingTop="10dp"
                android:paddingBottom="20dp">

                <!-- Header -->
                <TextView
                    android:id="@+id/result_disclaimer_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/results_disclaimer_header"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Body text -->
                <TextView
                    android:id="@+id/result_disclaimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="50dp"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="4dp"
                    android:padding="16dp"
                    android:text="@string/result_disclaimer_txt"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
